Fix content overflow

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,9 +1,3 @@
-// Needed otherwise iframes show a disabled scrollbar
-html,
-body
-  overflow-y: auto
-  overflow-x: hidden
-
 body
   padding: 50px
   font-family: 'Source Sans Pro', sans-serif
